--- a/app/app.css
+++ b/app/app.css
@@ -65,7 +65,6 @@ body {
 .answers li {
   clear: both;
   padding-top: 15px;
-  padding-left: 40px;
   border-bottom: 1px solid #ddd;
 }
 
@@ -84,4 +83,23 @@ div .edit-info {
   border: 1px solid #ddd;
   margin: 5px;
   padding: 15px;
+}
+
+.votes {
+  text-align: center;
+  padding-right: 0px;
+  font-size: 20px;
+  color: #6a737c;
+}
+
+.votes span.glyphicon {
+  cursor: pointer;
+}
+
+.votes span.glyphicon-triangle-bottom {
+  padding-top: 5px;
+}
+
+.votes span.vote-nb {
+  padding-left: 1px;
 }
