add delete question feature

--- a/app/app.css
+++ b/app/app.css
@@ -103,3 +103,9 @@ div .edit-info {
 .votes span.vote-nb {
   padding-left: 1px;
 }
+
+.delete {
+  float: right;
+  padding-top: 30px;
+  cursor: pointer;
+}
